fixing last commit

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     }
     .full-height {
       height: 100vh;
-      padding: 5px 20px;
+      padding: 15px 20px;
+      opacity: 0.9;
     }
   </style>
   <body data-spy="scroll" data-target=".navbar">
